--- a/app/design/frontend/base/default/template/page/html/offcanvas.phtml
+++ b/app/design/frontend/base/default/template/page/html/offcanvas.phtml
@@ -12,9 +12,7 @@
 <dialog id="offcanvas">
     <div class="offcanvas-header">
         <h2 class="offcanvas-title"></h2>
-        <button class="offcanvas-close" aria-label="<?= $this->__('Close') ?>" type="button">&times;</button>
+        <button class="offcanvas-close" aria-label="<?= $this->__('Close') ?>" type="button"><?= $this->getIconSvg('x') ?></button>
     </div>
-    <div class="offcanvas-content">
-        <!-- All content will be moved here by JavaScript -->
-    </div>
+    <div class="offcanvas-content"></div>
 </dialog>
