--- a/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
@@ -13,7 +13,7 @@
 ?>
 <?php if($this->getCollection()->getSize()): ?>
 <div class="toolbar">
-    <button class="sidebar-trigger filters-trigger">Filters</button>
+    <button class="offcanvas-trigger filters-trigger">Filters</button>
     <?php if( $this->isExpanded() ): ?>
         <div class="sorter">
             <div class="sort-by">
