--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -12,7 +12,7 @@
 /** @var Mage_Customer_Block_Account_Navigation $this */
 ?>
 <div class="block block-account">
-    <button class="block-title sidebar-trigger">
+    <button class="block-title offcanvas-trigger">
         <?= $this->__('My Account') ?>
     </button>
     <div class="block-content">
