--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -12,7 +12,7 @@
 /** @var Mage_Customer_Block_Account_Navigation $this */
 ?>
 <div class="block block-account">
-    <button class="block-title offcanvas-trigger" data-offcanvas-target=".block-account .block-content" data-offcanvas-title="<?= $this->__('My Account') ?>">
+    <button class="block-title offcanvas-trigger" data-offcanvas-target="ul.nav-account" data-offcanvas-title="<?= $this->__('My Account') ?>">
         <?= $this->__('My Account') ?>
     </button>
     <div class="block-content">
