--- a/app/design/frontend/base/default/template/catalog/navigation/left.phtml
+++ b/app/design/frontend/base/default/template/catalog/navigation/left.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -15,9 +15,8 @@
 <?php $_categories = $this->getCurrentChildCategories() ?>
 <?php $_count = is_array($_categories)?count($_categories):$_categories->count(); ?>
 <?php if($_count): ?>
-<div class="block block-layered-nav>
+<div class="block block-layered-nav">
     <div class="block-content toggle-content open">
-        <p class="block-subtitle block-subtitle--filter"><?= $this->__('Filter') ?></p>
         <dl id="narrow-by-list2">
             <dt><?= $this->__('Category') ?></dt>
             <dd>
