--- a/app/design/adminhtml/default/default/layout/newsletter.xml
+++ b/app/design/adminhtml/default/default/layout/newsletter.xml
@@ -6,6 +6,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 -->
@@ -13,6 +14,9 @@
 <layout>
     <adminhtml_newsletter_template_edit>
         <update handle="editor"/>
+        <reference name="head">
+            <action method="addJs"><name>mage/adminhtml/system/email-template.js</name></action>
+        </reference>
         <reference name="content">
             <block type="adminhtml/newsletter_template_edit" name="template_edit" template="newsletter/template/edit.phtml" />
         </reference>
@@ -20,6 +24,9 @@
 
     <adminhtml_newsletter_queue_edit>
         <update handle="editor"/>
+        <reference name="head">
+            <action method="addJs"><name>mage/adminhtml/system/email-template.js</name></action>
+        </reference>
         <reference name="content">
             <block type="adminhtml/newsletter_queue_edit" name="queue_edit" template="newsletter/queue/edit.phtml" />
         </reference>
