--- a/app/design/adminhtml/default/default/template/cms/browser/tree.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/tree.phtml
@@ -60,6 +60,8 @@
     });
 
     tree.expandPath('<?= $this->getTreeCurrentPath() ?>').then((node) => {
-        MediabrowserInstance.selectFolder(node);
+        MediabrowserInstance.selectFolder(node, true).then(() => {
+            MediabrowserInstance.selectFileById('<?= $this->getTreeCurrentFile() ?>');
+        });
     });
 </script>
