--- a/app/design/adminhtml/default/default/template/newsletter/queue/edit.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/queue/edit.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -45,41 +45,19 @@
         <input type="hidden" id="preview_id" name="id" value="" />
     </div>
 </form>
-<script type="text/javascript">
-//<![CDATA[
-var queueForm = new varienForm('queue_edit_form');
-var newsletterPreviewForm = new varienForm('newsletter_queue_preview_form');
-
-var queueControl = {
-    id: 'text',
-    save: function() {
-        $('_resume_flag').value = '';
-        queueForm.submit();
+<script>
+const queueControl = new EmailTemplateEditForm({
+    forms: {
+        edit: new varienForm('newsletter_template_edit_form'),
+        preview: new varienForm('newsletter_template_preview_form'),
     },
-    preview: function() {
-        if (this.isEditor() && tinymce.get(this.id)) {
-            tinymce.triggerSave();
-            $('preview_text').value = $(this.id).value;
-            tinymce.triggerSave();
-        } else {
-            $('preview_text').value = $(this.id).value;
-        }
-        if ($('styles') != undefined) {
-            $('preview_styles').value = $('styles').value;
-        }
-        if ($('id') != undefined) {
-            $('preview_id').value = $('id').value;
-        }
-        newsletterPreviewForm.submit();
-        return false;
+    elements: {
+        templateId: 'id',
+        templateText: 'text',
+        templateStyles: 'template_styles',
+        previewId: 'preview_id',
+        previewText: 'preview_text',
+        previewStyles: 'preview_styles',
     },
-    isEditor: function() {
-        return (typeof tinyMceEditors != 'undefined' && tinyMceEditors[this.id] != undefined)
-    },
-    resume: function() {
-        $('_resume_flag').value = '1';
-        queueForm.submit();
-    }
-};
-//]]>
+});
 </script>
