--- a/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
@@ -12,22 +12,22 @@
 /** @var Mage_Adminhtml_Block_Newsletter_Template_Edit $this */
 ?>
 <div class="content-header">
-   <h3><?= $this->getHeaderText() ?></h3>
-   <p class="content-buttons form-buttons">
-                <?= $this->getBackButtonHtml() ?>
-                <?= $this->getResetButtonHtml() ?>
-                <?php if(!$this->isTextType()): ?>
-                <?= $this->getToPlainButtonHtml() ?>
-                <?= $this->getToHtmlButtonHtml() ?>
-                <?php endif ?>
-                <?= $this->getPreviewButtonHtml() ?>
-                <?php if($this->getEditMode()): ?>
-                <?= $this->getDeleteButtonHtml() ?>
-                <?php endif ?>
-                <?php if($this->getEditMode()): ?>
-                <?= $this->getSaveAsButtonHtml() ?>
-                <?php endif ?>
-                <?= $this->getSaveButtonHtml() ?>
+    <h3><?= $this->getHeaderText() ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getBackButtonHtml() ?>
+        <?= $this->getResetButtonHtml() ?>
+        <?php if (!$this->isTextType()): ?>
+        <?= $this->getToPlainButtonHtml() ?>
+        <?= $this->getToHtmlButtonHtml() ?>
+        <?php endif ?>
+        <?= $this->getPreviewButtonHtml() ?>
+        <?php if ($this->getEditMode()): ?>
+        <?= $this->getDeleteButtonHtml() ?>
+        <?php endif ?>
+        <?php if ($this->getEditMode()): ?>
+        <?= $this->getSaveAsButtonHtml() ?>
+        <?php endif ?>
+        <?= $this->getSaveButtonHtml() ?>
     </p>
 </div>
 <form action="<?= $this->getSaveUrl() ?>" method="post" id="newsletter_template_edit_form">
@@ -47,130 +47,25 @@
         <input type="hidden" id="preview_id" name="id" value="" />
     </div>
 </form>
-<script type="text/javascript">
-//<![CDATA[
-    var templateForm = new varienForm('newsletter_template_edit_form');
-    var templatePreviewForm = new varienForm('newsletter_template_preview_form');
-    var templateControl = {
-
-        unconvertedText: '',
-        typeChange: false,
-        templateName: false,
-        id: 'text',
-
-        init: function () {
-            if ($('convert_button_back')) {
-                $('convert_button_back').hide();
-            }
-        },
-
-        stripTags: function () {
-            if(!window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to strip all tags?')) ?>")) {
-                return false;
-            }
-            if(this.isEditor()) {
-                this.getEditor().turnOff();
-                this.getEditor().getToggleButton().hide();
-            }
-            this.unconvertedText = $(this.id).value;
-            $('convert_button').hide();
-            $('convert_button_back').show();
-            $(this.id).value =  $(this.id).value.stripScripts().stripTags();
-            $('field_template_styles').hide();
-            this.typeChange = true;
-            return false;
-        },
-
-        unStripTags: function () {
-            $('convert_button').show();
-            $('convert_button_back').hide();
-            $(this.id).value =  this.unconvertedText;
-            if(this.isEditor()) {
-                this.getEditor().turnOn();
-                this.getEditor().getToggleButton().show();
-            }
-            this.typeChange = false;
-            $('field_template_styles').show();
-            return false;
-        },
-
-        save: function() {
-            if (this.typeChange) {
-                $('change_flag_element').value = '1';
-            }
-            if(this.isEditor()) {
-                tinymce.triggerSave();
-            }
-            templateForm.submit();
-            return false;
-        },
-
-        saveAs: function() {
-            if (this.typeChange) {
-                $('change_flag_element').value = '1';
-            }
-
-            if($F('code').blank() || $F('code')==templateControl.templateName) {
-               value = prompt('<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Please enter new template name')) ?>', templateControl.templateName + '<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__(' Copy')) ?>');
-               if(!value) {
-                   if(value !== null) {
-                       $('code').value = '';
-                       templateForm.submit();
-                   }
-                   return false;
-               } else {
-                   $('code').value = value;
-               }
-            }
-
-            $('save_as_flag').value = '1';
-
-            if(this.isEditor()) {
-                tinymce.triggerSave();
-            }
-            templateForm.submit();
-            return false;
-        },
-
-        preview: function() {
-            if (this.typeChange) {
-                $('preview_type').value = 1;
-            } else {
-                $('preview_type').value = 2;
-            }
-            if (this.isEditor() && tinymce.get(this.id)) {
-                tinymce.triggerSave();
-                $('preview_text').value = $(this.id).value;
-                tinymce.triggerSave();
-            } else {
-                $('preview_text').value = $(this.id).value;
-            }
-            if ($('template_styles') != undefined) {
-                $('preview_styles').value = $('template_styles').value;
-            }
-            if ($('id') != undefined) {
-                $('preview_id').value = $('id').value;
-            }
-            templatePreviewForm.submit();
-            return false;
-        },
-
-        deleteTemplate: function() {
-            if(window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to delete this template?')) ?>")) {
-                   window.location.href = '<?= $this->getDeleteUrl() ?>';
-            }
-        },
-
-        isEditor: function() {
-            return (typeof tinyMceEditors != 'undefined' && tinyMceEditors[this.id] != undefined)
-        },
-
-        getEditor: function() {
-            return tinyMceEditors[this.id];
-        }
-    };
-
-    templateControl.init();
-    templateControl.templateName = "<?= $this->getJsTemplateName() ?>";
-//]]>
+<script>
+const templateControl = new EmailTemplateEditForm({
+    templateName: "<?= $this->getJsTemplateName() ?>",
+    forms: {
+        edit: new varienForm('newsletter_template_edit_form'),
+        preview: new varienForm('newsletter_template_preview_form'),
+    },
+    urls: {
+        delete: '<?= $this->getDeleteUrl() ?>',
+    },
+    elements: {
+        templateId: 'id',
+        templateName: 'code',
+        templateText: 'text',
+        templateStyles: 'template_styles',
+        previewId: 'preview_id',
+        previewType: 'preview_type',
+        previewText: 'preview_text',
+        previewStyles: 'preview_styles',
+    },
+});
 </script>
