--- a/app/design/adminhtml/default/default/template/system/email/template/edit.phtml
+++ b/app/design/adminhtml/default/default/template/system/email/template/edit.phtml
@@ -14,17 +14,17 @@
 <div class="content-header">
     <h3><?= $this->getHeaderText() ?></h3>
     <p class="content-buttons form-buttons">
-                <?= $this->getBackButtonHtml() ?>
-                <?= $this->getResetButtonHtml() ?>
-                <?php if($this->getEditMode()): ?>
-                <?= $this->getDeleteButtonHtml() ?>
-                <?php endif ?>
-                <?php if(!$this->isTextType()): ?>
-                <?= $this->getToPlainButtonHtml() ?>
-                <?= $this->getToHtmlButtonHtml() ?>
-                <?php endif ?>
-                <?= $this->getPreviewButtonHtml() ?>
-                <?= $this->getSaveButtonHtml() ?>
+        <?= $this->getBackButtonHtml() ?>
+        <?= $this->getResetButtonHtml() ?>
+        <?php if ($this->getEditMode()): ?>
+        <?= $this->getDeleteButtonHtml() ?>
+        <?php endif ?>
+        <?php if (!$this->isTextType()): ?>
+        <?= $this->getToPlainButtonHtml() ?>
+        <?= $this->getToHtmlButtonHtml() ?>
+        <?php endif ?>
+        <?= $this->getPreviewButtonHtml() ?>
+        <?= $this->getSaveButtonHtml() ?>
     </p>
 </div>
 <?php if (!$this->getEditMode()): ?>
@@ -103,163 +103,26 @@
         <input type="hidden" id="preview_styles" name="styles" value="" />
     </div>
 </form>
-<script type="text/javascript">
-//<![CDATA[
-    var templateForm = new varienForm('email_template_edit_form');
-    var templatePreviewForm = new varienForm('email_template_preview_form');
-    var templateControl = {
-        unconvertedText: '',
-        typeChange: false,
-        variables: null,
-        init: function () {
-            if ($('convert_button_back')) {
-                $('convert_button_back').hide();
-            }
-            this.renderPaths(<?= $this->getUsedDefaultForPaths() ?>, 'used_default_for');
-            this.renderPaths(<?= $this->getUsedCurrentlyForPaths() ?>, 'used_currently_for');
-        },
-        stripTags: function () {
-            if(!window.confirm("<?= $this->jsQuoteEscape($this->__('Are you sure that you want to strip tags?')) ?>")) {
-                return false;
-            }
-            this.unconvertedText = $('template_text').value;
-            $('convert_button').hide();
-            $('template_text').value =  $('template_text').value.stripScripts().replace(
-                new RegExp('<style[^>]*>[\\S\\s]*?</style>', 'img'), ''
-            ).stripTags().strip();
-            $('convert_button_back').show();
-            $('field_template_styles').hide();
-            this.typeChange = true;
-            return false;
-        },
-        unStripTags: function () {
-            $('convert_button').show();
-            $('convert_button_back').hide();
-            $('template_text').value =  this.unconvertedText;
-            $('field_template_styles').show();
-            this.typeChange = false;
-            return false;
-        },
-        save: function() {
-            if (this.typeChange) {
-                $('change_flag_element').value = '1';
-            }
-            templateForm.submit();
-            return false;
-        },
-        preview: function() {
-            if (this.typeChange) {
-                $('preview_type').value = 1;
-            } else {
-                $('preview_type').value = 2;
-            }
-            if (typeof tinymce == 'undefined' || !tinymce.get('template_text')) {
-                $('preview_text').value = $('template_text').value;
-            } else {
-                $('preview_text').value = tinymce.get('template_text').getContent();
-            }
-
-            if ($('template_styles') != undefined) {
-                $('preview_styles').value = $('template_styles').value;
-            }
-
-            templatePreviewForm.submit();
-            return false;
-        },
-
-        deleteTemplate: function() {
-            if(window.confirm("<?= $this->jsQuoteEscape($this->__('Are you sure that you want to delete this template?')) ?>")) {
-                   window.location.href = '<?= $this->getDeleteUrl() ?>';
-            }
-        },
-
-        load: function() {
-            var form = new varienForm('email_template_load_form');
-
-            if (!form.validator.validate()) {
-                return;
-            }
-
-            this.variables = null;
-
-            new Ajax.Request($('email_template_load_form').action, {
-               parameters: Form.serialize($('email_template_load_form'), true),
-               area: $('email_template_load_form'),
-               onComplete: function (transport) {
-                   if (transport.responseText.isJSON()) {
-                       var fields = $H(transport.responseText.evalJSON());
-                       fields.each(function(pair) {
-                          if ($(pair.key)) {
-                              $(pair.key).value = pair.value.strip();
-                          }
-                          if (pair.key == 'template_type') {
-                              if (pair.value == 1) {
-                                  this.typeChange = true;
-                                  $('convert_button').hide();
-                                  $('convert_button_back').hide();
-                              } else {
-                                  this.typeChange = false;
-                                  $('convert_button_back').hide();
-                                  $('convert_button').show();
-                              }
-                          }
-                          if (pair.key == 'orig_template_used_default_for') {
-                               if(pair.value.length){
-                                   $('used_default_for').show();
-                                   this.renderPaths(pair.value, 'used_default_for');
-                               }
-                               else{
-                                   $('used_default_for').hide();
-                               }
-                          }
-                       }.bind(this));
-                   }
-               }.bind(this)
-            });
-
-        },
-
-        renderPaths: function(paths, fieldId){
-            var field = $(fieldId);
-            if(field){
-                field.down('td').next('td').update(this.parsePath(paths, '<span class="path-delimiter">&nbsp;-&gt;&nbsp;</span>', '<br />'));
-            }
-        },
-
-        parsePath: function (value, pathDelimiter, lineDelimiter) {
-            if (Object.isArray(value)) {
-                var result = [];
-                for (var i = 0, len = value.length; i < len; i++) {
-                    result.push(this.parsePath(value[i], pathDelimiter, pathDelimiter));
-                }
-                return result.join(lineDelimiter);
-            }
-
-            if(!Object.isString(value) && value.title) {
-                value = (value.url ? '<a href="' + value.url + '">' + value.title + '</a>' : value.title) + (value.scope ? '&nbsp;&nbsp;<span class="path-scope-label">(' + value.scope + ')</span>' : '');
-            }
-
-            return value;
-        },
-
-        openVariableChooser: function() {
-            Variables.init('template_text');
-            if (this.variables == null) {
-                Variables.resetData();
-                this.variables = $('variables').value.evalJSON();
-                var templateVariablesValue = $('template_variables').value;
-                if (this.variables && templateVariablesValue) {
-                    if (templateVariables = templateVariablesValue.evalJSON()) {
-                        this.variables.push(templateVariables);
-                    }
-                }
-            }
-            if (this.variables) {
-                Variables.openVariableChooser(this.variables);
-            }
-        }
-    };
-
-    templateControl.init();
-//]]>
+<script>
+const templateControl = new EmailTemplateEditForm({
+    forms: {
+        edit: new varienForm('email_template_edit_form'),
+        preview: new varienForm('email_template_preview_form'),
+        load: new varienForm('email_template_load_form'),
+    },
+    urls: {
+        delete: '<?= $this->getDeleteUrl() ?>',
+    },
+    elements: {
+        templateText: 'template_text',
+        templateStyles: 'template_styles',
+        previewType: 'preview_type',
+        previewText: 'preview_text',
+        previewStyles: 'preview_styles',
+    },
+    paths: {
+        used_default_for: <?= $this->getUsedDefaultForPaths() ?>,
+        used_currently_for: <?= $this->getUsedCurrentlyForPaths() ?>,
+    },
+});
 </script>
