--- a/app/design/adminhtml/default/default/template/widget/instance/edit/layout.phtml
+++ b/app/design/adminhtml/default/default/template/widget/instance/edit/layout.phtml
@@ -424,7 +424,7 @@ var WidgetInstance = {
 
 document.addEventListener('DOMContentLoaded', () => {
     <?php foreach ($this->getPageGroups() as $pageGroup): ?>
-        WidgetInstance.addPageGroup(<?= Zend_Json::encode($pageGroup) ?>);
+        WidgetInstance.addPageGroup(<?= Mage::helper('core')->jsonEncode($pageGroup) ?>);
     <?php endforeach ?>
     Event.observe(document, 'product:changed', function(event){
         WidgetInstance.checkProduct(event);
