--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -11,13 +11,10 @@
 
 /** @var Mage_Customer_Block_Account_Forgotpassword $this */
 ?>
-<div class="page-title">
-    <h1><?= $this->__('Forgot Your Password?') ?></h1>
-</div>
 <?= $this->getMessagesBlock()->toHtml() ?>
 <form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
     <div class="fieldset">
-        <h2><?= $this->__('Retrieve your password here') ?></h2>
+        <h1 class="h2"><?= $this->__('Retrieve your password here') ?></h1>
         <p class="form-instructions"><?= $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
         <p class="required"><?= $this->__('* Required Fields') ?></p>
         <ul class="form-list">
