--- a/app/design/frontend/base/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list.phtml
@@ -68,20 +68,22 @@
                         <?= $this->getPriceHtml($_product, true) ?>
                     </div>
                     <div class="product-secondary">
-                        <?php if(!$_product->canConfigure() && $_product->isSaleable()): ?>
-                            <p class="action">
-                                <?php $_cartUrl = $this->getAddToCartUrlCustom($_product, [], false); ?>
-                                <button type="button"
-                                        title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>"
-                                        class="button btn-cart"
-                                        onclick="customFormSubmit('<?= $_cartUrl ?>', '<?= $_params ?>', 'post')">
-                                    <?= $this->__('Add to Cart') ?>
-                                </button>
-                            </p>
-                        <?php elseif($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
-                            <p class="action"><a title="<?= $this->quoteEscape($this->__('View Details')) ?>" class="button" href="<?= $_product->getProductUrl() ?>"><?= $this->__('View Details') ?></a></p>
-                        <?php else: ?>
-                            <p class="action availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
+                        <?php if(Mage::getStoreConfigFlag('catalog/frontend/enable_addtocart_in_product_listings')): ?>
+                            <?php if(!$_product->canConfigure() && $_product->isSaleable()): ?>
+                                <p class="action">
+                                    <?php $_cartUrl = $this->getAddToCartUrlCustom($_product, [], false); ?>
+                                    <button type="button"
+                                            title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>"
+                                            class="button btn-cart"
+                                            onclick="customFormSubmit('<?= $_cartUrl ?>', '<?= $_params ?>', 'post')">
+                                        <?= $this->__('Add to Cart') ?>
+                                    </button>
+                                </p>
+                            <?php elseif($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
+                                <p class="action"><a title="<?= $this->quoteEscape($this->__('View Details')) ?>" class="button" href="<?= $_product->getProductUrl() ?>"><?= $this->__('View Details') ?></a></p>
+                            <?php else: ?>
+                                <p class="action availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
+                            <?php endif ?>
                         <?php endif ?>
                         <ul class="add-to-links">
                             <?php if ($this->helper('wishlist')->isAllow()) : ?>
@@ -177,18 +179,20 @@
                 </div>
 
                 <div class="actions">
-                    <?php if(!$_product->canConfigure() && $_product->isSaleable()): ?>
-                        <?php $_cartUrl = $this->getAddToCartUrlCustom($_product, [], false); ?>
-                        <button type="button"
-                                title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>"
-                                class="button btn-cart"
-                                onclick="customFormSubmit('<?= $_cartUrl ?>', '<?= $_params ?>', 'post')">
-                            <?= $this->__('Add to Cart') ?>
-                        </button>
-                    <?php elseif($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
-                        <a title="<?= $this->quoteEscape($this->__('View Details')) ?>" class="button" href="<?= $_product->getProductUrl() ?>"><?= $this->__('View Details') ?></a>
-                    <?php else: ?>
-                        <p class="availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
+                    <?php if(Mage::getStoreConfigFlag('catalog/frontend/enable_addtocart_in_product_listings')): ?>
+                        <?php if(!$_product->canConfigure() && $_product->isSaleable()): ?>
+                            <?php $_cartUrl = $this->getAddToCartUrlCustom($_product, [], false); ?>
+                            <button type="button"
+                                    title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>"
+                                    class="button btn-cart"
+                                    onclick="customFormSubmit('<?= $_cartUrl ?>', '<?= $_params ?>', 'post')">
+                                <?= $this->__('Add to Cart') ?>
+                            </button>
+                        <?php elseif($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
+                            <a title="<?= $this->quoteEscape($this->__('View Details')) ?>" class="button" href="<?= $_product->getProductUrl() ?>"><?= $this->__('View Details') ?></a>
+                        <?php else: ?>
+                            <p class="availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
+                        <?php endif ?>
                     <?php endif ?>
                 </div>
             </li>
