offcanvas-title, cannot have an empty h2

--- a/app/design/frontend/base/default/template/page/html/offcanvas.phtml
+++ b/app/design/frontend/base/default/template/page/html/offcanvas.phtml
@@ -11,7 +11,7 @@
 ?>
 <dialog id="offcanvas">
     <div class="offcanvas-header">
-        <h2 class="offcanvas-title"></h2>
+        <div class="offcanvas-title"></div>
         <button class="offcanvas-close" aria-label="<?= $this->__('Close') ?>" type="button"><?= $this->getIconSvg('x') ?></button>
     </div>
     <div class="offcanvas-content"></div>
