--- a/app/design/frontend/base/default/template/page/3columns.phtml
+++ b/app/design/frontend/base/default/template/page/3columns.phtml
@@ -30,13 +30,13 @@
                 <div class="col-wrapper">
                     <?php // This left_first block will display above the main content on smaller viewports ?>
                     <?php if ($_leftContent = $this->getChildHtml('left_first')): ?>
-                        <aside class="col-left sidebar col-left-first" aria-label="<?= $this->__('Primary sidebar') ?>"><?= $_leftContent;   ?></aside>
+                        <aside class="col-left sidebar col-left-first" aria-label="<?= $this->__('Primary sidebar') ?>"><?= $_leftContent ?></aside>
                     <?php endif ?>
                     <div class="col-main" id="main-content">
                         <?= $this->getChildHtml('global_messages') ?>
                         <?= $this->getChildHtml('content') ?>
                     </div>
-                    <aside class="col-left sidebar" aria-label="<?= $this->__('Left sidebar') ?>"><?= $this->getChildHtml('left') ?></aside>
+                    <aside class="col-left sidebar" aria-label="<?= $this->__('Secondary sidebar') ?>"><?= $this->getChildHtml('left') ?></aside>
                 </div>
                 <aside class="col-right sidebar" aria-label="<?= $this->__('Right sidebar') ?>"><?= $this->getChildHtml('right') ?></aside>
             </div>
