--- a/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/default.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/default.phtml
@@ -5,10 +5,9 @@
  * @package    Mage_Sales
  * @copyright  Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
- *
- * @var Mage_Sales_Block_Order_Pdf_Invoice $this
  */
 
+/* @var Mage_Sales_Block_Order_Pdf_Invoice $this */
 $invoice = $this->getInvoice();
 $order = $this->getOrder();
 ?>
