--- a/app/design/adminhtml/default/default/template/sales/order/pdf/creditmemo/default.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/creditmemo/default.phtml
@@ -7,7 +7,7 @@
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-/* @var Mage_Sales_Block_Order_Pdf_Creditmemo $this */
+/** @var Mage_Sales_Block_Order_Pdf_Creditmemo $this */
 $creditmemo = $this->getCreditmemo();
 $order = $this->getOrder();
 ?>
