--- a/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/items/default.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/items/default.phtml
@@ -7,7 +7,7 @@
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-/* @var Mage_Sales_Model_Order_Pdf_Items_Invoice_Default $this */
+/** @var Mage_Sales_Model_Order_Pdf_Items_Invoice_Default $this */
 $item = $this->getItem();
 $order = $this->getOrder();
 ?>
